--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "Web front-end course project",
   "main": "index.js",
   "dependencies": {
-    "gulp": "^3.9.1",
     "jquery": "^3.2.1",
     "sammy": "^0.7.6",
     "systemjs": "^0.20.19",
     "systemjs-plugin-babel": "^0.0.25"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/gulp": "^4.0.4",
+    "gulp": "^3.9.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
