--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Web front-end course project",
   "main": "index.js",
   "dependencies": {
+    "@types/firebase": "^2.4.32",
+    "firebase": "^4.4.0",
     "jquery": "^3.2.1",
     "sammy": "^0.7.6",
     "systemjs": "^0.20.19",
@@ -12,6 +14,7 @@
   "devDependencies": {
     "@types/gulp": "^4.0.4",
     "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
     "systemjs-builder": "^0.16.11"
   },
   "scripts": {
