--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "license": "ISC",
     "dependencies": {
         "firebase": "^4.4.0",
+        "handlebars": "^4.0.10",
         "jquery": "^3.2.1",
         "sammy": "^0.7.6",
         "systemjs": "^0.20.19",
