--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "systemjs-plugin-babel": "0.0.25"
     },
     "devDependencies": {
+        "gulp": "^3.9.1",
+        "gulp-sass": "^3.1.0",
         "systemjs-builder": "^0.16.11"
     }
 }
