--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "gulp dev"
+        "dev": "gulp dev",
+        "star": "node server.js"
     },
     "keywords": [],
     "author": "",
@@ -19,6 +20,7 @@
         "systemjs-plugin-babel": "0.0.25"
     },
     "devDependencies": {
+        "express": "^4.16.2",
         "gulp": "^3.9.1",
         "gulp-sass": "^3.1.0",
         "systemjs-builder": "^0.16.11"
