--- a/package.json
+++ b/package.json
@@ -1,28 +1,40 @@
 {
-    "name": "web-front-end",
-    "version": "1.0.0",
-    "description": "Web front-end course project",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "gulp dev",
-        "start": "node server.js"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "express": "^4.16.2",
-        "firebase": "^4.4.0",
-        "handlebars": "^4.0.10",
-        "jquery": "^3.2.1",
-        "sammy": "^0.7.6",
-        "systemjs": "^0.20.19",
-        "systemjs-plugin-babel": "0.0.25"
-    },
-    "devDependencies": {
-        "gulp": "^3.9.1",
-        "gulp-sass": "^3.1.0",
-        "systemjs-builder": "^0.16.11"
-    }
+  "name": "webpack-playground",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "watch": "webpack --progress --watch",
+    "start": "webpack-dev-server --no-inline --open"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.1",
+    "file-loader": "^1.1.5",
+    "firebase-tools": "^3.13.1",
+    "html-webpack-plugin": "^2.30.1",
+    "image-webpack-loader": "^3.4.2",
+    "node-sass": "^4.5.3",
+    "resolve-url-loader": "^2.1.1",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0",
+    "stylelint": "^8.2.0",
+    "stylelint-webpack-plugin": "^0.9.0",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.7.1",
+    "webpack-dev-server": "^2.9.3"
+  },
+  "dependencies": {
+    "firebase": "^4.6.0",
+    "handlebars": "^4.0.11",
+    "jquery": "^3.2.1",
+    "sammy": "^0.7.6"
+  }
 }
