--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
+    "clean": "rm -rf dist",
+    "build": "npm run clean && webpack",
     "watch": "webpack --progress --watch",
-    "start": "webpack-dev-server --no-inline --open"
+    "dev": "webpack-dev-server --no-inline --open",
+    "deploy": "npm run clean && npm run build && firebase deploy"
   },
   "keywords": [],
   "author": "",
